Enforce JWT authentication on v1 API
